bluegreen/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: bluegreen
  type: ClusterIP
